create contact page

--- a/HTML-Personal-Site/index.html
+++ b/HTML-Personal-Site/index.html
@@ -9,12 +9,12 @@
 <body>
   <img height="200" width="200" src="images/dp-modified.png" alt="ashwini profile picture">
   <h1>Ashwini Gupta</h1>
-  <p><em>Student at <strong>Netaji Subhas University of Technology</strong>.</em></p>
+  <p><em>Student at <strong><a href = "http://www.nsit.ac.in">Netaji Subhas University of Technology</a></strong>.</em></p>
   <hr>
   <h3>Education</h3>
   <ul>
     <li>NSUT, Delhi (B. Tech, <strong>Instrumentation and Control Engineering</strong>)</li>
-    <li>Mayur Public School (X, XII)</li>
+    <li><a href="http://www.mayurpublicschool.com">Mayur Public School</a> (X, XII)</li>
   </ul>
   <h3>Hobbies</h3>
   <ol>
@@ -22,6 +22,7 @@
     <li>Football</li>
     <li>Painting</li>
   </ol>
+  <a href="contact.html">Contact Me</a>
 </body>
 
 </html>
