Add Skills and Technologies

--- a/HTML-Personal-Site/index.html
+++ b/HTML-Personal-Site/index.html
@@ -9,13 +9,28 @@
 <body>
   <img height="200" width="200" src="images/dp-modified.png" alt="ashwini profile picture">
   <h1>Ashwini Gupta</h1>
-  <p><em>Student at <strong><a href = "http://www.nsit.ac.in">Netaji Subhas University of Technology</a></strong>.</em></p>
+  <p><em>Student at <strong><a href="http://www.nsit.ac.in" target="_blank">Netaji Subhas University of Technology</a></strong>.</em></p>
   <hr>
   <h3>Education</h3>
   <ul>
-    <li>NSUT, Delhi (B. Tech, <strong>Instrumentation and Control Engineering</strong>)</li>
-    <li><a href="http://www.mayurpublicschool.com">Mayur Public School</a> (X, XII)</li>
+    <li><a href="http://www.nsit.ac.in" target="_blank">NSUT</a>, Delhi (B. Tech, <strong>Instrumentation and Control Engineering</strong>)</li>
+    <li><a href="http://www.mayurpublicschool.com" target="_blank">Mayur Public School</a> (X, XII)</li>
   </ul>
+  <h3>Skills and Technologies</h3>
+  <table>
+    <thead>
+      <tr>
+        <th>Programming Languages</th>
+        <th>Technologies</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><a href="https://isocpp.org/" target="_blank">C++</a>, <a href="https://www.cprogramming.com/" target="_blank">C</a>, <a href="https://dart.dev/" target="_blank">Dart</a></td>
+        <td>Flutter, Linux, Android Studio, Aruduino IDE</td>
+      </tr>
+    </tbody>
+  </table>
   <h3>Hobbies</h3>
   <ol>
     <li>Badminton</li>
