--- a/HTML-Personal-Site/index.html
+++ b/HTML-Personal-Site/index.html
@@ -7,17 +7,25 @@
 </head>
 
 <body>
-  <img height="200" width="200" src="images/dp-modified.png" alt="ashwini profile picture">
-  <h1>Ashwini Gupta</h1>
-  <p><em>Student at <strong><a href="http://www.nsit.ac.in" target="_blank">Netaji Subhas University of Technology</a></strong>.</em></p>
+  <table cellspacing="20">
+    <tr>
+      <td><img height="200" width="200" src="images/dp-modified.png" alt="ashwini profile picture"></td>
+      <td>
+        <h1>Ashwini Gupta</h1>
+        <p><em>Student at <strong><a href="http://www.nsit.ac.in" target="_blank">Netaji Subhas University of Technology</a></strong>.</em></p>
+      </td>
+    </tr>
+  </table>
+
   <hr>
+
   <h3>Education</h3>
   <ul>
     <li><a href="http://www.nsit.ac.in" target="_blank">NSUT</a>, Delhi (B. Tech, <strong>Instrumentation and Control Engineering</strong>)</li>
     <li><a href="http://www.mayurpublicschool.com" target="_blank">Mayur Public School</a> (X, XII)</li>
   </ul>
   <h3>Skills and Technologies</h3>
-  <table>
+  <table border="1">
     <thead>
       <tr>
         <th>Programming Languages</th>
@@ -26,8 +34,42 @@
     </thead>
     <tbody>
       <tr>
-        <td><a href="https://isocpp.org/" target="_blank">C++</a>, <a href="https://www.cprogramming.com/" target="_blank">C</a>, <a href="https://dart.dev/" target="_blank">Dart</a></td>
-        <td>Flutter, Linux, Android Studio, Aruduino IDE</td>
+        <td>
+          <table>
+            <tbody>
+              <tr>
+                <td><a href="https://isocpp.org/" target="_blank">C++</a></td>
+                <td>⭐⭐⭐⭐⭐</td>
+              </tr>
+              <tr>
+                <td><a href="https://www.cprogramming.com/" target="_blank">C</a></td>
+                <td>⭐⭐⭐⭐</td>
+              </tr>
+              <tr>
+                <td><a href="https://dart.dev/" target="_blank">Dart</a></td>
+                <td>⭐⭐⭐</td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+        <td>
+          <table>
+            <tbody>
+              <tr>
+                <td>Flutter</td>
+                <td>⭐⭐⭐⭐</td>
+              </tr>
+              <tr>
+                <td>Linux</td>
+                <td>⭐⭐⭐⭐</td>
+              </tr>
+              <tr>
+                <td>Android Studio</td>
+                <td>⭐⭐⭐</td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
       </tr>
     </tbody>
   </table>
@@ -37,6 +79,7 @@
     <li>Football</li>
     <li>Painting</li>
   </ol>
+  <hr>
   <a href="contact.html">Contact Me</a>
 </body>
 
