Add links to linux, flutter and android studio official websites, and change order in contact page

--- a/HTML-Personal-Site/index.html
+++ b/HTML-Personal-Site/index.html
@@ -56,15 +56,15 @@
           <table>
             <tbody>
               <tr>
-                <td>Flutter</td>
+                <td><a href="https://flutter.dev/" target="_blank">Flutter</a></td>
                 <td>⭐⭐⭐⭐</td>
               </tr>
               <tr>
-                <td>Linux</td>
+                <td><a href="https://linux.org" target="_blank">Linux</a></td>
                 <td>⭐⭐⭐⭐</td>
               </tr>
               <tr>
-                <td>Android Studio</td>
+                <td><a href="https://developer.android.com/studio" target="_blank">Android Studio</a></td>
                 <td>⭐⭐⭐</td>
               </tr>
             </tbody>
