correct the go back link

--- a/CV/contact.html
+++ b/CV/contact.html
@@ -24,6 +24,6 @@
       <br>
       <input type="submit" name="">
     </form>
-    <h4><a href="../index.html"></a>Go Back</h4>
+    <h4><a href="../CV/index.html">Go Back</a></h4>
   </body>
 </html>
