--- a/CV/index.html
+++ b/CV/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>🦋 Ashwini's Personal Site</title>
 </head>
+<link rel="stylesheet" href="css/styles.css">
 
 <body>
   <table cellspacing="20">
@@ -24,8 +25,9 @@
     <li><a href="http://www.nsit.ac.in" target="_blank">NSUT</a>, Delhi (B. Tech, <strong>Instrumentation and Control Engineering</strong>)</li>
     <li><a href="http://www.mayurpublicschool.com" target="_blank">Mayur Public School</a> (X, XII)</li>
   </ul>
+  <hr>
   <h3>Skills and Technologies</h3>
-  <table border="1">
+  <table border="1" style="background-color: grey">
     <thead>
       <tr>
         <th>Programming Languages</th>
@@ -73,6 +75,7 @@
       </tr>
     </tbody>
   </table>
+  <hr>
   <h3>Hobbies</h3>
   <ol>
     <li>Badminton</li>
