--- a/CV/contact.html
+++ b/CV/contact.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Contact</title>
   </head>
+  <link rel="stylesheet" href="css/styles.css">
   <body>
     <h1>Contact info:</h1>
     <ul>
