--- a/CV/index.html
+++ b/CV/index.html
@@ -22,12 +22,12 @@
 
   <h3>Education</h3>
   <ul>
-    <li><a href="http://www.nsit.ac.in" target="_blank">NSUT</a>, Delhi (B. Tech, <strong>Instrumentation and Control Engineering</strong>)</li>
+    <li><a href="http://www.nsit.ac.in" target="_blank">NSUT</a>, Delhi (B. Tech, <strong style="color: #BEBF66">Instrumentation and Control Engineering</strong>)</li>
     <li><a href="http://www.mayurpublicschool.com" target="_blank">Mayur Public School</a> (X, XII)</li>
   </ul>
   <hr>
   <h3>Skills and Technologies</h3>
-  <table border="1" style="background-color: grey">
+  <table border="1" style="background-color: #F6EAEA">
     <thead>
       <tr>
         <th>Programming Languages</th>
