--- a/CSS-MySite/index.html
+++ b/CSS-MySite/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Ashwini Gupta</title>
   </head>
   <link rel="stylesheet" href="css/styles.css">
   <body>
